--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -83,6 +83,9 @@
         }
         .auction-left {
             padding-right: 50px;
+            @include mq("tablet") {
+                display: block !important;
+            }
             @include mq("laptop", max) {
                 padding-right: 12px;
             }
@@ -237,6 +240,7 @@
             @include mq("tablet", max) {
                 border: none;
             }
+
             .place-bid {
                 display: none;
                 margin-top: 65px;
@@ -251,7 +255,8 @@
                     display: none;
                 }
                 @include mq("tablet", max) {
-                    display: none;
+                    padding-left: 0;
+                    padding-right: 0;
                 }
                 .css-1s2u09g-control,
                 .css-1pahdxg-control {
@@ -271,6 +276,13 @@
                         display: none;
                     }
                 }
+                .select-label {
+                    font-weight: 600;
+                    font-size: 24px;
+                    line-height: 54px;
+                    color: #c4c4c4;
+                    margin: 45px 0 25px;
+                }
             }
         }
     }
@@ -280,7 +292,10 @@
     margin: 0 auto;
     padding: 31px 41px;
     border: 1px solid #464646;
-    width: 683px;
+    max-width: 683px;
+    @include mq("tablet", max) {
+        padding: 19px 12px;
+    }
     .range-label {
         font-weight: bold;
         font-size: 30px;
@@ -326,5 +341,50 @@
     }
     .btn-primary {
         margin-top: 60px;
+    }
+    .desktop-view {
+        @include mq("tablet", max) {
+            display: none;
+        }
+    }
+    .tablet-view {
+        display: none;
+        text-align: center;
+        @include mq("tablet", max) {
+            display: block;
+        }
+        .range-label {
+            font-size: 24px;
+            line-height: 29px;
+        }
+        .range-input {
+            width: 100%;
+            padding: 17px;
+            margin-top: 16px;
+            margin-bottom: 25px;
+            &::placeholder {
+                font-size: 14px;
+                line-height: 17px;
+                color: white;
+                opacity: 0.5;
+                text-transform: uppercase;
+            }
+        }
+        .total-input {
+            width: 100%;
+            margin: 0;
+            margin-top: 16px;
+            margin-bottom: 25px;
+            padding: 8px;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 37px;
+            color: $green;
+        }
+        .btn-primary {
+            font-size: 30px;
+            line-height: 37px;
+            padding: 8px 44px;
+        }
     }
 }
