--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -109,8 +109,9 @@
                 line-height: 46px;
             }
             @include mq("phone", max) {
-                font-size: 55px;
-                line-height: 60px;
+                font-size: 64px;
+                line-height: 78px;
+                letter-spacing: -0.02em;
             }
             &-text {
                 color: white;
