--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -2,6 +2,9 @@
 .profile-page {
     margin-bottom: 1rem;
     margin-top: -1rem;
+    @include mq("phone", max) {
+        margin: 0rem;
+    }
     .menu {
         border-bottom: 2px solid #464646;
     }
