--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -174,6 +174,7 @@
                 margin-top: 60px;
                 font-size: 18px;
                 line-height: 30px;
+                opacity: 0.9;
                 @include mq("phone", max) {
                     margin-top: 40px;
                     font-size: 14px;
