--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -46,3 +46,7 @@ input::-webkit-contacts-auto-fill-button {
     position: absolute;
     right: 0;
 }
+
+input {
+    border-radius: 0px !important;
+}
