--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -223,3 +223,10 @@ input[type="number"]::-webkit-outer-spin-button {
 .ms-40px {
     margin-left: 40px;
 }
+
+.first-letter\:text-green {
+    color: white !important;
+    &::first-letter {
+        color: $green !important;
+    }
+}
