--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -224,9 +224,18 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 40px;
 }
 
+.mt-40px {
+    margin-top: 40px;
+}
+
 .first-letter\:text-green {
     color: white !important;
     &::first-letter {
         color: $green !important;
     }
+}
+
+.py-12px {
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
 }
