--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -74,7 +74,10 @@
             }
         }
         @include mq("phone", max) {
-            display: none;
+            font-size: 16px;
+            margin-right: 10px;
+            line-height: 20px;
+            padding: 7px 20px;
         }
     }
 
