--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -256,3 +256,10 @@ input[type="number"]::-webkit-outer-spin-button {
 .border-bottom-2-dark-gray {
     border-bottom: 2px solid #464646;
 }
+
+.hover\:shadow-light {
+    transition: 500ms;
+    &:hover {
+        box-shadow: 0px 0px 8px lightgrey;
+    }
+}
