--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -385,8 +385,10 @@
                     display: block;
                     tr {
                         border-bottom: 2px solid #464646;
-                        cursor: pointer;
-
+                        // cursor: pointer;
+                        div.star_selected {
+                            cursor: pointer;
+                        }
                         td {
                             div.echarts-for-react.echarts-for-echarts {
                                 margin: auto;
@@ -947,7 +949,7 @@
 
 .profile-value {
     .value-box {
-        margin-top: 35px;
+        margin-top: 20px;
         background: rgba(43, 43, 43, 0.5);
         padding: 16px 12px;
     }
