--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -211,4 +211,20 @@
             margin-left: 8px;
         }
     }
+
+    &-footer {
+        border-top: 1px solid #dbdbdb;
+        height: 56px;
+        width: 100%;
+        padding: 12px;
+
+        .attachment {
+            transform: scale(-1, 1) rotate(-135deg);
+        }
+        .input {
+            font-size: 14px;
+            background-color: transparent;
+            border: 0;
+        }
+    }
 }
