--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -197,9 +197,15 @@
     overflow-y: auto;
     overflow-x: hidden;
     background-color: #f8f8f8;
-    position: absolute;
+    position: fixed;
     right: 15px;
     bottom: 15px;
+    @include mq("tablet", max) {
+        width: 100vw;
+        height: 100vh;
+        right: 0;
+        bottom: 0;
+    }
     &-header {
         border-bottom: 2px solid #dbdbdb;
         height: 60px;
