--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -201,8 +201,8 @@
     right: 15px;
     bottom: 15px;
     @include mq("tablet", max) {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         right: 0;
         bottom: 0;
     }
