--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -548,7 +548,7 @@
             p.subtitle {
                 color: dimgray;
             }
-            div.css-w4zpwe-Input {
+            .css-w4zpwe-Input, .css-155mtah {
                 display: none;
             }
         }
